--- a/Labs/Coding Exercises/Lab11/Nguyen_Viet_Anh/lap11.ipynb
+++ b/Labs/Coding Exercises/Lab11/Nguyen_Viet_Anh/lap11.ipynb
@@ -733,7 +733,9 @@
     "        dfCuoi.loc[dfCuoi['Name'] == df_lao.loc[i, 'Tên tỉnh'], 'BorderCount'] += 1\n",
     "dfCuoi\n",
     "# Su ly bang df_khm\n",
-    "    # Em định tái sử dụng code bên trên nhưng nó lạ lắm, em nộp trước rồi em fix nhau nhe chị :)) \n",
+    "    # Em định tái sử dụng code bên trên nhưng nó lạ lắm, em nộp trước rồi em fix sau nhe chị :)))  
+    
+
     "# for i in range(len(df_khm)):\n",
     "#     if len(dfCuoi.loc[dfCuoi['Name'] == df_khm.loc[i, 'Tên tỉnh']]) == 0:\n",
     "#         dfCuoi = dfCuoi.append({\n",
